--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "argon2": "^0.41.1",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongodb": "^6.11.0",
     "morgan": "~1.9.1"
   }
 }
