--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "type": "module",
   "dependencies": {
     "argon2": "^0.41.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jose": "^5.9.6",
     "mongodb": "^6.11.0",
     "morgan": "~1.9.1"
   }
