add configurable collection names

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 PORT="3000"
 PORT_INTERNAL="3001"
 MONGODB_URI="mongodb://localhost:27017/mydb"
+COLLECTION_ROLES="roles"
+COLLECTION_USERS="users"
 PASSWORD_SECRET="pepper"
 
 # expects a PKCS8 private key in PEM form
