oops I didn't make this collection configurable

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT_INTERNAL="3001"
 MONGODB_URI="mongodb://localhost:27017/mydb"
 COLLECTION_ROLES="roles"
 COLLECTION_USERS="users"
+COLLECTION_REFRESH_TOKENS="refreshTokens"
 PASSWORD_SECRET="pepper"
 
 # expects a PKCS8 private key in PEM form
